# TrikiScope

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.bat  run.ps1
tests/: smoke_app.py  test_games.py  test_gatt_names.py  test_gestures.py  test_orientation.py  test_protocol.py
tools/: diagnose.py  probe_ble_layer.py  probe_button.py  probe_led.py  probe_write_vendor.py
trikiscope/: __init__.py  __main__.py  app.py  ble.py  config.py  gatt_names.py  gestures.py  orientation.py  protocol.py  recorder.py  render.py
trikiscope/games/: __init__.py  base.py  reflex.py  spin_meter.py  tilt_maze.py
